[package]
name = "sift"
version = "0.1.0"
edition = "2021"
description = "Intelligent binary string extraction and analysis"
license = "MIT"
repository = "https://github.com/mattkelly/sift"

[[bin]]
name = "sift"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
once_cell = "1"
walkdir = "2"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
atty = "0.2"
encoding_rs = "0.8"
thiserror = "1"
num-format = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
